--- a/plugins/users/app/views/groups/edit.html.erb
+++ b/plugins/users/app/views/groups/edit.html.erb
@@ -1,4 +1,3 @@
-  <%= javascript_include_tag "group_members.js" %>
 <%
  disabled = ! ((@permissions[:groupadd] && @adding) || (@permissions[:groupmodify] && !@adding)) %>
 <div class='plugin-icon'><img src='/icons/yast-groups.png' alt="groups module"/>
@@ -10,36 +9,12 @@
       end %>
 </div>
 <div class="plugin-content grid_12">
-<% form_for :group, :url => { :action => "create"}, :html => { :id => "groupForm", :autocomplete => :off}  do |f| %>
+<% form_for :group, :url => { :action => @adding ? "create" : "update"}, :html => { :id => "groupForm", :autocomplete => :off}  do |f| %>
   <%= f.error_messages %>
   <%= f.hidden_field :old_cn %>
-  <fieldset>
-    <p>
-      <label><%=_("Group Name")%></label>
-      <%= f.text_field :cn, :disabled => false %>
-    </p>
-    <p>
-      <label><%=_("Group ID")%></label>
-      <%= f.text_field :gid, :disabled => false %>
-    </p>
-     <p>
-      <label><%=_("Group Type")%></label>
-      <%= f.text_field :group_type, :disabled => false %>
-    </p>
-    <p>
-      <label><%=_("Default members")%></label>
-      <%= f.text_field :default_members_string, :disabled => true %>
-    </p>
-    <p>
-      <label><%=_("Members")%></label>
-      <%= f.text_field :members_string, :disabled => false %>
-    </p>
-  </fieldset>
 
-  <fieldset>
-    <%= form_cancel_button :action => :index %>
-    <%= form_str_spacer %>
-    <%= form_next_button %>
-  </fieldset>
+      <%= render :partial => 'group_form',
+      :locals => { :f => f } %>
+
 <% end %>
 </div>
