use icon from users

--- a/plugins/users/app/views/groups/edit.html.erb
+++ b/plugins/users/app/views/groups/edit.html.erb
@@ -1,6 +1,6 @@
 <%
  disabled = ! ((@permissions[:groupadd] && @adding) || (@permissions[:groupmodify] && !@adding)) %>
-<div class='plugin-icon'><img src='/icons/yast-groups.png' alt="groups module"/>
+<div class='plugin-icon'><img src='/icons/yast-users.png' alt="groups module"/>
   <%=_("Groups") + header_spacer %>
   <%= if @adding
          _("Add new group")
