--- a/plugins/users/app/views/groups/index.html.erb
+++ b/plugins/users/app/views/groups/index.html.erb
@@ -1,4 +1,4 @@
-<div class='plugin-icon'><img src='/icons/yast-groups.png'/><%=_("Groups")%></div>
+<div class='plugin-icon'><img src='/icons/yast-users.png'/><%=_("Groups")%></div>
 <div class="plugin-content grid_12">
 
 <div>
