--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -77,7 +77,7 @@
     <fieldset class="wrapper with-background">
         <legend><%= _("Mail Setup for User 'root'") -%></legend>
 	<p>
-	<label><%=_("Forward mail to")%></label>
+	<label><%=_("Forward system mail to")%></label>
 	<%= f.text_field :aliases, :disabled => disabled, :class => "emails" %>
 	<% unless params.has_key? "firstboot" # during initial configuration, allow only main Save button %>
 	<%= f.submit _("Save Mail Only"), :name => "save_aliases", :disabled => disabled, :onclick=>"return $('#adminForm').validate().element('#administrator_aliases');", :class=>'cancel' %>
