rename group name, disable group_type

--- a/plugins/users/app/views/groups/_group_form.erb
+++ b/plugins/users/app/views/groups/_group_form.erb
@@ -9,7 +9,7 @@
     </p>
      <p>
       <label><%=_("Group Type")%></label>
-      <%= f.text_field :group_type, :disabled => false %>
+      <%= f.text_field :group_type, :disabled => true %>
     </p>
     <p>
       <label><%=_("Default members")%></label>
