--- a/plugins/users/app/views/groups/index.html.erb
+++ b/plugins/users/app/views/groups/index.html.erb
@@ -1,6 +1,44 @@
+<% content_for :head do %>
+
+<%= javascript_include_tag "jquery.quicksearch.js"-%>
+
+ <style>
+    .pad1_2em {
+	padding: 1em 2em;
+    }
+    tr {
+	border: solid 1px #ddd;
+    }
+    label, .qs_input {
+	width: auto !important;
+    }
+ </style>
+
+ <% javascript_tag do %>
+ jQuery.expr[':'].Contains = function(a, i, m) {
+  return jQuery(a).text().toUpperCase().indexOf(m[3].toUpperCase()) >= 0;
+ };
+
+ $(document).ready(function(){
+
+ $('table tbody tr').quicksearch({
+        attached: 'div#qs_anchor',
+	inputText: '<%= _("Type group name ...")%>',
+	inputClass: 'qs_input',
+        loaderText: '',
+        labelText: '<%= _("Filter:")%>',
+	stripeRowClass: ['odd', 'even'],
+        delay: 100
+ });
+
+});//document.ready
+<% end %>
+
+<% end %>
 <div class='plugin-icon'><img src='/icons/yast-users.png'/><%=_("Groups")%></div>
 <div class="plugin-content grid_12">
 
+<div id='qs_anchor' class='pad1_2em'></div>
 <div>
    <% if @permissions[:groupadd] %>
      <%= link_to _("Add New Group"), :action => :new -%>
