--- a/plugins/software/app/views/repositories/index.html.erb
+++ b/plugins/software/app/views/repositories/index.html.erb
@@ -111,38 +111,26 @@
 		<p><div style="min-width: 6em; float: left; margin-left: 1em">URL: </div>
 		  <%= f.text_field :url, :disabled => disabled, :class => 'repo_url required' -%></p>
 
-		<p>Repository is currently <i><%= r.enabled ? _('enabled') : _('disabled') %></i>.
+		<p>Repository is currently <i><%= bool_status r.enabled %></i>.
 		  <% if !disabled  %>
-		    <%= f.hidden_field :enabled, :id => "repo_enabled_" + sid, :value => r.enabled -%>
-		    <span id="repo_enabled_change_<%= sid -%>"style="display: none">
-		      <b>Repository will be <%= r.enabled ? _('disabled') : _('enabled') %>.</b></span>
-		    (<a onclick="switch_flag('#repo_enable_<%= sid -%>', '#repo_enabled_<%= sid -%>', '<%= r.enabled -%>',
-			'#repo_enabled_change_<%= sid -%>')"
-			id="repo_enable_<%= sid -%>"><%= r.enabled ? _('disable') : _('enable') -%></a>)
+		    <%= hidden_field_with_link f, sid, :enabled, r.enabled,
+		      _("Repository will be %s.") % bool_status(!r.enabled) -%>
 		  <% end %>
 		</p>
 
-		<p>Autorefresh is currently <i><%= r.autorefresh ? _('enabled') : _('disabled') %></i>.
+		<p>Autorefresh is currently <i><%= bool_status r.autorefresh %></i>.
 		  <% if !disabled  %>
-		    <%= f.hidden_field :autorefresh, :id => "repo_autorefresh_" + sid, :value => r.autorefresh -%>
-		    <span id="repo_autorefresh_change_<%= sid -%>"style="display: none">
-		      <b>Autorefresh will be <%= r.autorefresh ? _('disabled') : _('enabled') %>.</b></span>
-		    (<a onclick="switch_flag('#<%= "repo_autorefresh_link_" + sid -%>', '#repo_autorefresh_<%= sid -%>',
-			'<%= r.autorefresh -%>', '#repo_autorefresh_change_<%= sid -%>')"
-			id="repo_autorefresh_link_<%= sid -%>"><%= r.autorefresh ? _('disable') : _('enable') -%></a>)
+		    <%= hidden_field_with_link f, sid, :autorefresh, r.autorefresh,
+		      _("Autorefresh will be %s.") % bool_status(!r.autorefresh) -%>
 		  <% end %>
 		</p>
 
 		<p>Priority for packages: <%= prio_selector f, r.priority, disabled %></p>
 
-		<p>Keeping downloaded packages is currently <i><%= r.keep_packages ? _('enabled') : _('disabled') %>.</i>
+		<p>Keeping downloaded packages is currently <i><%= bool_status r.keep_packages %>.</i>
 		  <% if !disabled  %>
-		    <%= f.hidden_field :keep_packages, :id => "repo_keep_packages_" + sid, :value => r.keep_packages -%>
-		    <span id="repo_keep_packages_change_<%= sid -%>"style="display: none">
-		      <b>Keep packages option will be <%= r.keep_packages ? _('disabled') : _('enabled') %>.</b></span>
-		    (<a onclick="switch_flag('#<%= "repo_keep_packages_link_" + sid -%>', '#repo_keep_packages_<%= sid -%>',
-			'<%= r.keep_packages -%>', '#repo_keep_packages_change_<%= sid -%>')"
-			id="repo_keep_packages_link_<%= sid -%>"><%= r.keep_packages ? _('disable') : _('enable') -%></a>)
+		    <%= hidden_field_with_link f, sid, :keep_packages, r.keep_packages,
+		      _("Keep packages option will be %s.") % bool_status(!r.keep_packages) -%>
 		  <% end %>
 		</p>
 
