--- a/plugins/software/app/views/repositories/index.html.erb
+++ b/plugins/software/app/views/repositories/index.html.erb
@@ -2,64 +2,90 @@
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag "jquery.quicksearch.js" %>
 
-  <% javascript_tag do %>
-  $(document).ready(function(){
-    $(".accordion").accordion({
-       autoHeight : false,
-       navigation : true,
-       collapsible: true,
-       header     : 'div.list-fieldset div.list-fieldset-header'
+  <style type="text/css">
+    label.error { float: none; color: red; padding-left: 6.5em; vertical-align: top; width: 100%; text-align: left }
+  </style>
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+      // define a custom validation function for repository URL
+      jQuery.validator.addMethod("repo_url", function(value, element) {
+	return this.optional(element)
+	// modified regexp from jQuery validation: accept any protocol, not only http(s) and ftp
+	|| /^([a-zA-Z]+):\/\/(((([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(%[\da-f]{2})|[!\$&'\(\)\*\+,;=]|:)*@)?(((\d|[1-9]\d|1\d\d|2[0-4]\d|25[0-5])\.(\d|[1-9]\d|1\d\d|2[0-4]\d|25[0-5])\.(\d|[1-9]\d|1\d\d|2[0-4]\d|25[0-5])\.(\d|[1-9]\d|1\d\d|2[0-4]\d|25[0-5]))|((([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])*([a-z]|\d|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])))\.)+(([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])*([a-z]|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])))\.?)(:\d*)?)(\/((([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(%[\da-f]{2})|[!\$&'\(\)\*\+,;=]|:|@)+(\/(([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(%[\da-f]{2})|[!\$&'\(\)\*\+,;=]|:|@)*)*)?)?(\?((([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(%[\da-f]{2})|[!\$&'\(\)\*\+,;=]|:|@)|[\uE000-\uF8FF]|\/|\?)*)?(\#((([a-z]|\d|-|\.|_|~|[\u00A0-\uD7FF\uF900-\uFDCF\uFDF0-\uFFEF])|(%[\da-f]{2})|[!\$&'\(\)\*\+,;=]|:|@)|\/|\?)*)?$/i.test(value);
+
+      }, "<%= _("Enter a valid repository URL.") -%>");
+
+      // define a custom validation function for repository alias
+      jQuery.validator.addMethod("repo_alias", function(value, element) {
+	return this.optional(element)
+	// PackageKit does not accept some special characters in alias
+	|| /^[^`'"\\\[\]^$\{\}<>]*$/i.test(value);
+
+      }, "<%= _("Symbols <b>%s</b> are not allowed in repository alias.") % "^${}[]&gt;&lt;`\\'\\\"\\\\" -%>");
+
+      // set custom translatable messages
+      $.extend($.validator.messages, {
+	required: "<%= _("This value cannot be empty.") -%>"
+      });
     });
 
-    $(".accordion").accordion('activate',false);
+    $(document).ready(function(){
+      $(".accordion").accordion({
+	 autoHeight : false,
+	 navigation : true,
+	 collapsible: true,
+	 header     : 'div.list-fieldset div.list-fieldset-header'
+      });
 
-    $('#repositories div.list-fieldset').quicksearch({
-	attached: '#repositories',
-	loaderText: '',
-	labelText: '<%= _("Quick Search") -%>',
-	delay: 100
+      $(".accordion").accordion('activate',false);
+
+      $('#repositories div.list-fieldset').quicksearch({
+	  attached: '#repositories',
+	  loaderText: '',
+	  labelText: '<%= _("Quick Search") -%>',
+	  delay: 100
+      });
     });
-  });
 
-  function select_repositories (val) {
-    if (val == "all") {
-	$("#repositories > div.list-fieldset").show();
-    }
-    else if (val == "enabled") {
-      $("#repositories > div.list-fieldset.repository-enabled").show();
-      $("#repositories > div.list-fieldset.repository-disabled").hide();
-    }
-    else if (val == "disabled") {
-      $("#repositories > div.list-fieldset.repository-enabled").hide();
-      $("#repositories > div.list-fieldset.repository-disabled").show();
+    function select_repositories (val) {
+      if (val == "all") {
+	  $("#repositories > div.list-fieldset").show();
+      }
+      else if (val == "enabled") {
+	$("#repositories > div.list-fieldset.repository-enabled").show();
+	$("#repositories > div.list-fieldset.repository-disabled").hide();
+      }
+      else if (val == "disabled") {
+	$("#repositories > div.list-fieldset.repository-enabled").hide();
+	$("#repositories > div.list-fieldset.repository-disabled").show();
+      };
+     };
+
+    function switch_flag(link, field, deflt, changes) {
+      // change the hidden field and the link text
+      if ($(field).val() == "true")
+      {
+	$(field).val("false");
+	$(link).text("<%= _("enable") -%>");
+      }
+      else
+      {
+	$(field).val("true");
+	$(link).text("<%= _("disable") -%>");
+      };
+
+      // display/hide the changes text
+      if (deflt == $(field).val())
+      {
+	$(changes).hide();
+      }
+      else
+      {
+	$(changes).show();
+      };
     };
-   };
-
-  function switch_flag(link, field, deflt, changes) {
-    // change the hidden field and the link text
-    if ($(field).val() == "true")
-    {
-      $(field).val("false");
-      $(link).text("<%= _("enable") -%>");
-    }
-    else
-    {
-      $(field).val("true");
-      $(link).text("<%= _("disable") -%>");
-    };
-
-    // display/hide the changes text
-    if (deflt == $(field).val())
-    {
-      $(changes).hide();
-    }
-    else
-    {
-      $(changes).show();
-    };
-  };
-
-  <% end %>
+  </script>
 <% end %>
 
   <div class='plugin-icon'><img src='/icons/yast-online_update.png'/><%=_("Software Repositories") %></div>
@@ -103,6 +129,16 @@
 		:html => { :method => :put, :id => 'repositoryForm_' + sid, :onsubmit =>
 		"if ($('#repositoryForm_#{sid}').valid()) {$('#progress').show(); return true;} else return false;" }
 	      ) do |f| %>
+
+		<% content_for :head do %>
+		  <script type="text/javascript">
+		      $(document).ready(function(){
+			// validate the form
+			$("#repositoryForm_<%= sid -%>").validate()
+		      });
+		  </script>
+		<% end %>
+
 		<p><div style="min-width: 6em; float: left; margin-left: 1em">Alias: </div><i><%= h r.id %></i></p>
 
 		<p><div style="min-width: 6em; float: left; margin-left: 1em">Name: </div>
