--- a/plugins/users/app/views/groups/index.html.erb
+++ b/plugins/users/app/views/groups/index.html.erb
@@ -35,7 +35,7 @@
 <% end %>
 
 <% end %>
-<div class='plugin-icon'><img src='/icons/yast-users.png'/><%=_("Groups")%></div>
+<div class='plugin-icon'><img src='/icons/yast-groups.png'/><%=_("Groups")%></div>
 <div class="plugin-content grid_12">
 
 <div id='qs_anchor' class='pad1_2em'></div>
