link from users to groups and vice versa

--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -77,6 +77,7 @@
   <% if @permissions[:useradd] %>
   <% end %>
 </fieldset>
+<%= link_to "Manage Groups", "controller" => "groups" %>
 </div>
 </div>
 
