rename "Local Users" to "Users" (bnc#590791)

--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -43,7 +43,7 @@
 <% end %>
 
 <% end %>
-<div class='plugin-icon'><img src='/icons/yast-users.png'/><%=_("Local Users")%></div>
+<div class='plugin-icon'><img src='/icons/yast-users.png'/><%=_("Users")%></div>
 <div class="plugin-content grid_12">
 
 <div id='qs_anchor' class='pad1_2em'></div>
