--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -83,7 +83,7 @@
 <% end %>
 
 <div class='plugin-icon'><img src='/icons/yast-users.png' alt="users module"/>
-  <%=_("Local Users") + header_spacer + _("Add new user")%>
+  <%=_("Users") + header_spacer + _("Add new user")%>
 </div>
 <div class="plugin-content grid_12">
 <% form_for :user, :url => { :action => "create"}, :html => { :id => "userForm", :autocomplete => :off}  do |f| %>
