Move input.error from html to css (bnc#592282)
Reasoning:
- About 99% of computer screens are 'landscape' mode.
- A dialog size must remain static to appear quiet.

Pending:
- make it a partial to be reused in other dialogs

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -450,6 +450,22 @@ label {
   margin: 0.2em 0.5em;
 }
 
+/* make error messages show up right of the label, bnc#592282 */
+input.error {
+  float: left;
+}
+
+label.error {
+  float: left;
+  text-align: left;
+  vertical-align: middle;
+  display: none;
+  color: red;
+  padding: 0 0 0 0;
+  margin: 2px;
+}
+
+
   label.radio-right {
     display:block;
     float:left;
