show error message when adding non exists user as group member (bnc#592223)

--- a/plugins/users/app/views/groups/edit.html.erb
+++ b/plugins/users/app/views/groups/edit.html.erb
@@ -25,6 +25,7 @@
      <p>
       <label><%=_("Group Type")%></label>
       <%= f.text_field :group_type, :disabled => true %>
+      <%= f.hidden_field :group_type %>
     </p>
     <p>
       <label><%=_("Default members")%></label>
